# AUSPEX-AERO

./: .gitignore  README.md
docs/: GNC data flow.drawio  OBC state machine.drawio
src/auspex_aero/: package.xml  setup.cfg  setup.py
src/auspex_aero/auspex_aero/gnc/: _types.py  fc_interface.py  flight_manager.py  guidance.py  navigation.py
src/auspex_aero/auspex_aero/offboard_controller/: _utils.py  offboard_controller.py
src/auspex_aero/auspex_aero/peripheral_devices/: device.py
src/auspex_aero/auspex_aero/peripheral_devices/cameras/: rpi5_camera.py  sim_is_camera.py  sim_ue_camera.py
src/auspex_aero/auspex_aero/peripheral_devices/cameras/camera_stream/: ipc_video_publisher.py  ipc_video_subscriber.py  rtsp_bridge.py  rtsp_server.py
src/auspex_aero/auspex_aero/peripheral_devices/other/: drop_servo.py
src/auspex_aero/launch/: auspex_aero.launch.py
src/auspex_aero_msgs/: CMakeLists.txt  package.xml
src/auspex_aero_msgs/actions/: ChangeAltitude.action  CircleLocation.action  CloseServo.action  Fly2D.action  FlyAboveGroundLevel.action  FlyStep3D.action  Hover.action  Land.action  Takeoff.action  Turn.action
src/auspex_aero_msgs/srv/: PauseExecution.srv
src/auspex_cam/: CMakeLists.txt  package.xml
src/auspex_cam/include/auspex_cam/: camera_controller_base.hpp  camera_controller_rpi5.hpp  camera_controller_simIS.hpp  camera_controller_simUE.hpp  camera_controller_siyi_zt30.hpp
src/auspex_cam/include/siyi_sdk/: siyi_sdk.hpp
src/auspex_cam/include/stream_handler/: rtsp_server_manager.hpp  stream_handler.hpp
src/auspex_cam/launch/: auspex_cam.launch.py
src/auspex_cam/src/: camera_controller_base.cpp  camera_controller_rpi5.cpp  camera_controller_simIS.cpp  camera_controller_simUE.cpp  camera_controller_siyi_zt30.cpp
src/auspex_cam/src/airsim_connection_manager/: airsim_connection_manager.cpp
src/auspex_cam/src/siyi_sdk/: siyi_sdk.cpp
src/auspex_cam/src/stream_handler/: rtsp_server_manager.cpp  stream_handler.cpp
src/auspex_fci/: CMakeLists.txt  package.xml
src/auspex_fci/include/auspex_fci/: fc_interface_base.hpp  geodetic_converter.hpp  position_listener_base.hpp  safety_guard.hpp  status_listener_base.hpp
src/auspex_fci/include/auspex_fci/anafi/: fc_interface_anafi.hpp  my_anafi.cpp  position_listener_anafi.hpp  status_listener_anafi.hpp
src/auspex_fci/include/auspex_fci/mavsdk/: fc_interface_mavsdk.hpp  position_listener_mavsdk.hpp  status_listener_mavsdk.hpp
src/auspex_fci/include/auspex_fci/px4/: fc_interface_px4.hpp  position_listener_px4.hpp  status_listener_px4.hpp
src/auspex_obc/: CMakeLists.txt  package.xml
src/auspex_obc/include/auspex_obc/: Vector3D.h  cam_rpi.hpp  cam_rpi5.hpp  cam_sim.hpp  drone_state_publisher.hpp  ext_data_listener.hpp  obc_node.h  platform_state_publisher.hpp
src/auspex_obc/launch/: auspex_obc.launch.py
src/auspex_obc/src/: cam_rpi.cpp  cam_rpi5.cpp  cam_sim.cpp  ext_data_listener.cpp  obc_main.cpp  obc_node.cpp
src/auspex_ocs/: CMakeLists.txt  package.xml
src/auspex_ocs/include/auspex_ocs/: airsim_connection_manager.hpp  cam_publisher_base.hpp  cam_publisher_empty.hpp  cam_publisher_mk_smart.hpp  cam_publisher_rpi.hpp  cam_publisher_rpi5.hpp  cam_publisher_sim.hpp  cam_publisher_simIS.hpp  cam_publisher_simUE.hpp
src/auspex_ocs/src/: airsim_connection_manager.cpp  cam_publisher_base.cpp  cam_publisher_empty.cpp  cam_publisher_mk_smart.cpp  cam_publisher_rpi.cpp  cam_publisher_rpi5.cpp  cam_publisher_sim.cpp  cam_publisher_simIS.cpp  cam_publisher_simUE.cpp
